--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,38 @@
     <title>Strata Playground</title>
   </head>
   <body>
-    
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <h1>Static HTML</h1>
+          <p>This is how the final form should look.</p>
+          <form action="/new_user.html" action="POST" >
+            <div>
+              <span>Full Name</span>
+              <input type="textbox" id="fullname" />
+            </div>
+            <div>
+              <span>Email</span>
+              <input type="textbox" id="email" />
+            </div>
+            <div>
+              <span>Password</span>
+              <input type="textbox" id="password" />
+            </div>
+            <div>
+              <button type="submit">Done</button>
+            </div>
+          </form> 
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <h1>Hand coded HTML with JavaScript</h1>
+          <div id="root"></div>
+        </div>
+      </div>
+    </div>
+    <!-- <script src="test/01_user-form.js" ></script> -->
     <script src="../src/playground/index.js" ></script>
   </body>
 </html>
