--- a/public/index.html
+++ b/public/index.html
@@ -37,12 +37,13 @@
       </div>
       <div class="row">
         <div class="col">
-          <h1>Hand coded HTML with JavaScript</h1>
-          <div id="root"></div>
+          <div style="margin: 50px 0; border-top: 1px solid black; padding-top: 20px;">
+            <h1>Hand coded HTML with JavaScript</h1>
+            <div id="root"></div>
+          </div>
         </div>
       </div>
     </div>
-    <!-- <script src="test/01_user-form.js" ></script> -->
-    <script src="../src/playground/index.js" ></script>
+    <!-- <script src="../src/playground/index.js" ></script> -->
   </body>
 </html>
