--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,6 @@
         </div>
       </div>
     </div>
-    <!-- <script src="../src/playground/index.js" ></script> -->
+    <script src="../src/playground/index.js" ></script>
   </body>
 </html>
